@@ -1,5 +1,7 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.001002
+ [Added / develop requires]
+ - Test::Needs
 
 0.001001 2016-04-01T09:31:35Z
